--- a/index.html
+++ b/index.html
@@ -280,6 +280,15 @@
   }
   .btn:hover .btn-arrow { transform: translateX(3px); color: var(--accent); }
 
+  .btn-discord:hover {
+    border-color: rgba(88,101,242,0.4);
+    box-shadow: 0 4px 16px rgba(88,101,242,0.12);
+  }
+  .btn-donate:hover {
+    border-color: rgba(255,140,0,0.4);
+    box-shadow: 0 4px 16px rgba(255,140,0,0.1);
+  }
+
   /* TikTok icon color */
   .tiktok-icon { color: #fff; }
 
@@ -552,7 +561,7 @@
 
   <div class="avatar-wrapper">
     <div class="avatar-ring">
-      <div class="avatar">🐱</div>
+      <div class="avatar"><img src="https://api.dicebear.com/7.x/adventurer/svg?seed=pugiy&backgroundColor=1a1a1a" alt="Pugiy" style="width:100%;height:100%;border-radius:50%;object-fit:cover;"></div>
     </div>
   </div>
 
@@ -560,16 +569,48 @@
   <div class="tag">✦ streamer · content creator ✦</div>
 
   <div class="desc">
-    kucing hitam yang suka nongkrong di depan layar<br>
+    just a person likes to laugh, cat, and you 😸<br>
     <em>join the cat squad 🐾</em>
   </div>
 
   <div class="links">
-    <a href="#" class="btn">
+    <a href="https://www.tiktok.com/@pu91y" class="btn">
       <span class="btn-icon tiktok-icon">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 01-2.88 2.5 2.89 2.89 0 01-2.89-2.89 2.89 2.89 0 012.89-2.89c.28 0 .54.04.79.1V9.01a6.33 6.33 0 00-.79-.05 6.34 6.34 0 00-6.34 6.34 6.34 6.34 0 006.34 6.34 6.34 6.34 0 006.33-6.34V8.69a8.2 8.2 0 004.79 1.52V6.74a4.85 4.85 0 01-1.02-.05z"/></svg>
+        <img src="https://cdn.simpleicons.org/tiktok/ffffff" alt="TikTok" style="width:18px;height:18px;object-fit:contain;">
       </span>
-      <span class="btn-label">TikTok — @pugiy</span>
+      <span class="btn-label">TikTok — @pu91y</span>
+      <span class="btn-arrow">→</span>
+    </a>
+
+    <a href="https://www.tiktok.com/@pu9iy" class="btn">
+        <span class="btn-icon tiktok-icon">
+          <img src="https://cdn.simpleicons.org/tiktok/ffffff" alt="TikTok" style="width:18px;height:18px;object-fit:contain;">
+        </span>
+        <span class="btn-label">TikTok — @pu9iy</span>
+        <span class="btn-arrow">→</span>
+      </a>
+
+    <a href="https://discord.com/invite/aNEPByX52P" class="btn">
+      <span class="btn-icon">
+        <img src="https://cdn.simpleicons.org/discord/5865F2" alt="Discord" style="width:18px;height:18px;object-fit:contain;">
+      </span>
+      <span class="btn-label">Discord — Miaw World</span>
+      <span class="btn-arrow">→</span>
+    </a>
+
+    <a href="https://discord.gg/Gc8mhCyjHb" class="btn">
+        <span class="btn-icon">
+          <img src="https://cdn.simpleicons.org/discord/5865F2" alt="Discord" style="width:18px;height:18px;object-fit:contain;">
+        </span>
+        <span class="btn-label">Discord — Ruang Merenung</span>
+        <span class="btn-arrow">→</span>
+      </a>
+
+    <a href="https://sociabuzz.com/pugiy" class="btn btn-donate">
+      <span class="btn-icon">
+        <img src="https://cdn.simpleicons.org/bitcoin/ff8b1f" alt="SociaBuzz" style="width:18px;height:18px;object-fit:contain;border-radius:3px;">
+      </span>
+      <span class="btn-label">SociaBuzz — Support</span>
       <span class="btn-arrow">→</span>
     </a>
   </div>
